--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/ui": "^3.3.0",
     "better-sqlite3": "^12.2.0",
     "nuxt": "^4.0.1",
+    "nuxt-security": "^2.3.0",
     "typescript": "^5.8.3",
     "valibot": "^1.1.0",
     "vue": "^3.5.17",
